create page_home and page_login

--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -14,7 +14,7 @@
             <button type="submit">Entrar</button>
         </form>
         <div class="options">
-            <a href="#">Criar conta</a>
+            <a href="/pmv-ads-2024-1-e1-proj-web-t10-pmv-ads-2024-1-e1-proj-financeiro/codigo-fonte/src/Cadastro/cadastro.html">Criar conta</a>
         </div>
     </div>
 </body>
