criei a pagina login

--- a/codigo-fonte/src/Page_Home/TelaInicial.html
+++ b/codigo-fonte/src/Page_Home/TelaInicial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/pmv-ads-2024-1-e1-proj-web-t10-pmv-ads-2024-1-e1-proj-financeiro/codigo-fonte/src/Page_Home/style.css" />
     <script src="https://kit.fontawesome.com/28cbdddf58.js" crossorigin="anonymous"></script>
     <title>Tela Principal</title>
 </head>
