--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Formulário de Cadastro</title>
   </head>
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="form-image">
         <img
-          src="/assets/img/undraw_sign_up_n6im.svg"
+          src="/documentos/img/undraw_sign_up_n6im.svg"
           alt="imagem"
         />
       </div>
