--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -13,11 +13,11 @@
         </div>
         <div class="right-login">
             <div class="card-login">
-                <h1><span class="underline">Bem</span>-Vindo!</h1>
+                <h1><span class="underline">Bem</span>-vindo!</h1>
                 <div class="textfield">
-                    <input type="text" placeholder="Usuário">
+                    <input type="text" placeholder="Usuário" class="input-usuario">
                 </div>
-                <div class="textfield">
+                <div class="textfield-pass">
                     <input type="password" placeholder="Senha">
                 </div>
                 <button class="btn-login">Entrar</button>
