--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -21,6 +21,7 @@
                     <input type="password" placeholder="Senha">
                 </div>
                 <button class="btn-login">Entrar</button>
+                <hr class="divisoria">
                 <button class="btn-create-acc">Criar conta</button>
             </div>
         </div>      
