correção no link do css no arquivo config pefil

--- a/codigo-fonte/src/Configuracao_perfil/Config_perfil.html
+++ b/codigo-fonte/src/Configuracao_perfil/Config_perfil.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="carolina content="width=device-width, initial-scale=1.0">
+    <meta name="carolina content="width=device-width, initial-scale="1.0">
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="index.css.css"
-</head>
+    <link rel="stylesheet" href="/codigo-fonte/src/Configuracao_perfil/Style_config_perfil.css"
+<head>
 <body>
 <div>
     <h1> <p><u>Configurações de perfil</u></p></h1>
