--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="form-image">
         <img
-          src="/documentos/img/undraw_sign_up_n6im.svg"
+          src="/pmv-ads-2024-1-e1-proj-web-t10-pmv-ads-2024-1-e1-proj-financeiro/documentos/img/undraw_sign_up_n6im.svg"
           alt="imagem"
         />
       </div>
@@ -23,7 +23,7 @@
               <h1>Cadastre-se</h1>
             </div>
             <div class="login-button">
-              <button><a target="_blank" href="http://127.0.0.1:5501/codigo-fonte/src/Page_login/login.html">Entrar</a></button>
+              <button><a target="_blank" href="/pmv-ads-2024-1-e1-proj-web-t10-pmv-ads-2024-1-e1-proj-financeiro/codigo-fonte/src/Page_login/login.html">Entrar</a></button>
             </div>
           </div>
           <div class="input-group">
