--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="/pmv-ads-2024-1-e1-proj-web-t10-pmv-ads-2024-1-e1-proj-financeiro/documentos/img/money.ico" type="image/x-icon">
 
     <title>Formulário de Cadastro</title>
   </head>
