link imagem alterado

--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="/codigo-fonte/src/Cadastro/img/money.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/money.ico" type="image/x-icon">
 
     <title>Formulário de Cadastro</title>
   </head>
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="form-image">
         <img
-          src="/codigo-fonte/src/Cadastro/img/undraw_sign_up_n6im.svg"
+          src="img/undraw_sign_up_n6im.svg"
           alt="imagem"
         />
       </div>
