--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -23,7 +23,7 @@
                 </div>
                 <button class="btn-login">Entrar</button>
                 <hr class="divisoria">
-                <button class="btn-create-acc">Criar conta</button>
+                <button><a href="codigo-fonte/src/Cadastro/cadastro.html"></a></button> class="btn-create-acc">Criar conta</button>
             </div>
         </div>      
     </div>
