adicionado a page graficos

--- a/codigo-fonte/src/Tela_Principal2/index.html
+++ b/codigo-fonte/src/Tela_Principal2/index.html
@@ -23,7 +23,7 @@
             <li><h1>dev<span>.</span>finance<span>$</span></h1></li>
             <li><a href="/page-main/index.html">Home</a></li>
             <li>
-              <a href="/page-grafic/page_grafico.html">Garafico </a>
+              <a href="/codigo-fonte/src/Page_grafico/grafico.html">Grafico </a>
               <span class="help-user">
                 <i class="ph ph-warning-circle"></i>
 
