Atualizacao tela de login

--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -16,14 +16,14 @@
             <div class="card-login">
                 <h1><span class="underline">Bem</span>-vindo!</h1>
                 <div class="textfield">
-                    <input type="text" placeholder="Usuário" class="input-usuario">
+                    <input type="text" id="usuario" placeholder="Usuário" class="input-usuario">
                 </div>
                 <div class="textfield-pass">
-                    <input type="password" placeholder="Senha">
+                    <input type="password" id="senha" placeholder="Senha">
                 </div>
                 <button class="btn-login">Entrar</button>
                 <hr class="divisoria">
-                <button><a href="codigo-fonte/src/Cadastro/cadastro.html"></a></button> class="btn-create-acc">Criar conta</button>
+                <button class="btn-create-acc">Criar conta</button>
             </div>
         </div>      
     </div>
