Adicionado codigo Favicon

--- a/codigo-fonte/src/Tela_Principal2/index.html
+++ b/codigo-fonte/src/Tela_Principal2/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
 
         <script src="/codigo-fonte/src/Tela_Principal2/script.js" defer></script>
+        <link rel="shortcut icon" href="img/money.ico" type="image/x-icon">
 </head>
 
 <body>
