--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="money.ico" type="image/x-icon">
     <title>Login</title>
     <script src="login.js" defer></script>
 </head>
