--- a/codigo-fonte/src/Page_grafico/grafico.html
+++ b/codigo-fonte/src/Page_grafico/grafico.html
@@ -6,6 +6,7 @@
   <title>Dev.Finance$</title>
 
   <link rel="stylesheet" href="/codigo-fonte/src/Page_grafico/style_grafico.css">
+  <link rel="shortcut icon" href="/codigo-fonte/src/Cadastro/img/money.ico" type="image/x-icon">
 
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
