Correção endereçamento na pag. principal e gráfico

--- a/codigo-fonte/src/Page_grafico/grafico.html
+++ b/codigo-fonte/src/Page_grafico/grafico.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dev.Finance$</title>
 
-  <link rel="stylesheet" href="/codigo-fonte/src/Page_grafico/style_grafico.css">
-  <link rel="shortcut icon" href="/codigo-fonte/src/Cadastro/img/money.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style_grafico.css">
+  <link rel="shortcut icon" href="../Cadastro/img/money.ico" type="image/x-icon">
 
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -19,7 +19,7 @@
             <li><h1>dev<span>.</span>finance<span>$</span></h1></li>
             <li><a href="/codigo-fonte/src/Tela_Principal2/index.html">Home</a></li>
             <li>
-              <a href="../Page_grafico/grafico.html">Grafico </a>
+              
               <span class="help-user">
                 <i class="ph ph-warning-circle"></i>
 
