--- a/codigo-fonte/src/Tela_Principal2/index.html
+++ b/codigo-fonte/src/Tela_Principal2/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
         rel="stylesheet">
 
-        <script src="/codigo-fonte/src/Tela_Principal2/script.js" defer></script>
+        <script src="../Tela_Principal2/script.js" defer></script>
         <link rel="shortcut icon" href="img/money.ico" type="image/x-icon">
 </head>
 
@@ -21,10 +21,9 @@
     <header>
         <nav class="container">
           <ul>
-            <li><h1>dev<span>.</span>finance<span>$</span></h1></li>
-            <li><a href="../Tela_Principal2/index.html">Home</a></li>
+            <li><h1>dev<span>.</span>finance<span>$</span></h1></li>            
             <li>
-              <a href="/codigo-fonte/src/Page_grafico/grafico.html">Grafico </a>
+              <a href="../Page_grafico/grafico.html">Grafico </a>
               <span class="help-user">
                 <i class="ph ph-warning-circle"></i>
 
