--- a/codigo-fonte/src/Configuracao_perfil/Config_perfil.html
+++ b/codigo-fonte/src/Configuracao_perfil/Config_perfil.html
@@ -2,43 +2,31 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"content="width=device-width, initial-scale=1.0">
-    <title>Tela de Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Configuração de Perfil</title>
     <link rel="stylesheet" href="index.css.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
     <header>
         <nav class="container">
-          <ul>
-            <li><h1>dev<span>.</span>finance<span>$</span></h1></li>
-            <li><a href="/codigo-fonte/src/Tela_Principal2/index.html">Home</a></li>
-            <li>
-              <a href="../Page_grafico/grafico.html">Grafico </a>
-              <span class="help-user">
-                <i class="ph ph-warning-circle"></i>
-
-              </span>
-            </li>
-          </ul>
-          <span id="user_avatar"><i class="ph ph-user"></i></span>
+            <ul>
+                <li><h1>dev<span>.</span>finance<span>$</span></h1></li>
+                <li><a href="/codigo-fonte/src/Tela_Principal2/index.html">Home</a></li>
+            </ul>
+            <span id="user_avatar"><i class="ph ph-user"></i></span>
         </nav>
-  </header>
+    </header>
   
-<div>
-    <h2>Configurações de perfil</h2>
-    <form id="form">
-    <input type="text" id="usuario" placeholder="&#128100 Usuário" class="input required">
-    <br><br>
-    <input type="password" id="senhaAntiga" placeholder="&#128274 Senha antiga" class="input required">
-    <br><br>
-    <input type="password" id="novaSenha" placeholder="&#128274 Nova senha" class="input required">
-    <br><br>
-    <hr>
-    <button type="submit">Salvar alterações</button>
-    </form>
-</div>  
+    <div class="perfil-config">
+        <h2><span class="underline">Confi</span>guração de perfil</h2>
+        <input type="text" id="usuario" placeholder="Usuário" class="input required">
+        <input type="password" id="senhaAntiga" placeholder="Senha antiga" class="input required">
+        <input type="password" id="novaSenha" placeholder="Nova senha" class="input required">
+        <hr>
+        <button type="submit">Salvar alterações</button>
+    </div>  
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
