--- a/codigo-fonte/src/Page_grafico/grafico.html
+++ b/codigo-fonte/src/Page_grafico/grafico.html
@@ -7,6 +7,10 @@
 
   <link rel="stylesheet" href="style_grafico.css">
   <link rel="shortcut icon" href="../Cadastro/img/money.ico" type="image/x-icon">
+  <link
+  href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+  rel="stylesheet">
+
 
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -26,7 +30,7 @@
               </span>
             </li>
           </ul>
-          <span id="user_avatar"><i class="ph ph-user"></i></span>
+          <span id="user_avatar" onclick="Menu_lateral.open()"><i class="ph ph-user"></i></span>
         </nav>
   </header>
 
@@ -34,5 +38,33 @@
     <canvas class="chartJs"> </canvas>
     <canvas class="chart"> </canvas>
   </main>
+
+  <div class="side-bar">
+    <i class="ph ph-x" onclick="Menu_lateral.close()"></i>
+    <div class="menu-lateral">
+      <li id="user_avatar"> <span><i class="ph ph-user"></i></span></li>
+      <li class="item"> <i class="ph ph-lock"></i> Admin </li>
+      <li class="item" onclick ="Modal_About.open()"><i class="ph ph-info"></i> Sobre</li>
+      <li class="item"><i class="ph ph-sign-out"></i> Sair </li>
+    </div>
+  </div>
+  
+  <div class="modal-About">
+    <div class="modal">
+      <i class="ph ph-x" onclick="Modal_About.close()"></i>
+      <h2> Dev.Finance<span>$</span></h2>
+      <p>O Devi.Finance tem como objetivo geral permitir aos usuarios administrar suas finanças, atraves de tabelas e graficos. Afim de, ajudar a sairem das dividas.
+      <br>  <br>Abaixo se encontram os responsaveis pelo Desenvolvimento deste projeto.      
+      </p>
+      <ul class="list-group">
+        <li>Ana Carolina Alves de Sousa </li>
+        <li> Angélica Maria Nunes de Aguiar</li>
+        <li>Elenice Aparecida Silva</li>
+        <li>Lucas Santiago Plínio</li>
+        <li>Rafael Junior Martins </li>
+        <li> Yasmin Maia Trindade</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
