ajuster na tela login

--- a/codigo-fonte/src/Page_login/login.html
+++ b/codigo-fonte/src/Page_login/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-login">
         <div class="left-login">
-            <img src="section1.png" alt="Imagem de fundo">
+            <img src="img-login.svg" alt="Imagem de fundo">
         </div>
         <div class="right-login">
             <div class="card-login">
