Alteração: redução de três para somente um botão.

--- a/codigo-fonte/src/Tela_Principal2/index.html
+++ b/codigo-fonte/src/Tela_Principal2/index.html
@@ -75,22 +75,8 @@
                         <span>                            
                             <a href="#" 
                             onclick="Modal.open()"
-                            class="button new">Adicionar</a>
+                            class="button new">Transações</a>
                         </span>
-                    </h3>
-
-                </div>
-
-                <div class="small-card">
-                    <h3>
-                        Meses
-                        <img src="img/calendario.jpg" alt="Image de saídas" height="25px" width="25px">
-                    </h3>
-                </div>
-
-                <div class="small-card">
-                    <h3>
-                        Descrição
                     </h3>
 
                 </div>
